[package]
name = "ros2-4diac-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.1", features = ["derive"] }
nom = "7.1.3"
xmltree = "0.10.3"
